# CUPT

./: .dockerignore  .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py
app/db/: session.py
app/db/models/: __init__.py  group.py  group_member.py  session_interval.py  study_session.py  subject.py  user.py
app/schemas/: group.py  group_member.py  session_interval.py  study_session.py  subject.py  user.py
